<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90175DE6"
    android:contentDescription="@string/photo_text"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="20sp"
                android:fontFamily="cursive"
                android:text="@string/heading_intro"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="176dp"
                android:layout_height="187dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:contentDescription="@string/photo_text"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="100sp"
                android:text="@string/build_name"
                android:textColor="#0B73C5"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="90sp"
                android:shadowColor="#5C9322"
                android:text="@string/take_test_label"
                android:textColor="#EAD202"
                android:textColorHighlight="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:checkable="false"
                android:onClick="takeTestButton"
                android:text="@string/take_test"
                android:textColor="#FAE478"
                app:chipSurfaceColor="#D12929"
                app:textStartPadding="30dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="80sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/power_company"
                android:textColor="#393030"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
