<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultPage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:subtitle="REPORT MENU"
                app:subtitleTextColor="#FBFAFA"
                app:title="@string/app_name2"
                app:titleTextColor="#FFFDFD" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="40sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/congratulate"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/test_complete_message"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/testNameReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="35sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:gravity="center"
                android:text="Test Name - "
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="@font/allan"
                android:gravity="center"
                android:text="@string/progress"
                android:textColor="#BE28D8"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:textColor="#FD0808"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:gravity="center"
                android:textColor="#06B1A1"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80sp"
                android:gravity="center"
                android:onClick="returnHome"
                android:text="@string/home_page_return"
                android:textColor="#FBF70A"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:chipSurfaceColor="#203DFA"
                app:textEndPadding="20sp"
                app:textStartPadding="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="60sp"
                android:layout_marginBottom="15sp"
                android:text="@string/power_company" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>